--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2025 Політична партія "Хребет Нації". Всі права захищені.</p>
+                <p>© 2025 Політична партія "Хребет Нації" | UKRAINE GTA 04. Всі права захищені.</p>
             </div>
         </div>
     </footer>
