--- a/index.html
+++ b/index.html
@@ -90,39 +90,110 @@
             margin-top: 0.3rem;
         }
 
+        /* Оновлена навігація з випадаючими меню */
         nav {
             display: flex;
-            gap: 1.5rem;
+            gap: 0.5rem;
+            position: relative;
+        }
+
+        .nav-item {
+            position: relative;
         }
 
         .nav-link {
             color: white;
             text-decoration: none;
             font-weight: 500;
-            padding: 0.5rem 0;
+            padding: 0.5rem 1rem;
             position: relative;
             transition: var(--transition);
+            display: flex;
+            align-items: center;
+            white-space: nowrap;
         }
 
         .nav-link::after {
             content: '';
             position: absolute;
             bottom: 0;
-            left: 0;
-            width: 0;
+            left: 1rem;
+            width: calc(100% - 2rem);
             height: 2px;
             background-color: var(--secondary);
+            transform: scaleX(0);
             transition: var(--transition);
+            transform-origin: bottom right;
         }
 
         .nav-link:hover::after {
-            width: 100%;
+            transform: scaleX(1);
+            transform-origin: bottom left;
         }
 
         .nav-link:hover {
             color: var(--secondary);
         }
 
+        .dropdown-menu {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background-color: white;
+            min-width: 220px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            border-radius: 4px;
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(10px);
+            transition: var(--transition);
+            z-index: 100;
+        }
+
+        .nav-item:hover .dropdown-menu {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+        }
+
+        .dropdown-menu a {
+            color: var(--dark);
+            padding: 0.75rem 1.5rem;
+            text-decoration: none;
+            display: block;
+            transition: var(--transition);
+            border-left: 3px solid transparent;
+        }
+
+        .dropdown-menu a:hover {
+            background-color: rgba(0, 87, 183, 0.05);
+            color: var(--primary);
+            border-left: 3px solid var(--secondary);
+        }
+
+        .dropdown-arrow {
+            margin-left: 5px;
+            transition: var(--transition);
+            font-size: 0.8em;
+        }
+
+        .nav-item:hover .dropdown-arrow {
+            transform: rotate(180deg);
+        }
+
+        @media (max-width: 768px) {
+            nav {
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 0.3rem;
+            }
+            .nav-link {
+                padding: 0.5rem 0.7rem;
+                font-size: 0.9rem;
+            }
+        }
+
+        /* Решта стилів залишаються без змін */
         /* Hero */
         .hero {
             padding: 4rem 0;
@@ -453,11 +524,6 @@
                 gap: 1.5rem;
             }
 
-            nav {
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-
             .hero-title {
                 font-size: 2rem;
             }
@@ -486,12 +552,41 @@
                     </div>
                 </a>
                 <nav>
-                    <a href="#" class="nav-link">Головна</a>
-                    <a href="#" class="nav-link">Про партію</a>
-                    <a href="#" class="nav-link">Новини</a>
-                    <a href="#" class="nav-link">Склад</a>
-                    <a href="#" class="nav-link">Програма</a>
-                    <a href="#" class="nav-link">Контакти</a>
+                    <div class="nav-item">
+                        <a href="#" class="nav-link">Головна</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#" class="nav-link">Партія <span class="dropdown-arrow">▼</span></a>
+                        <div class="dropdown-menu">
+                            <a href="#">Про партію</a>
+                            <a href="#">Історія</a>
+                            <a href="#">Структура</a>
+                            <a href="#">Документи</a>
+                            <a href="#">Статут</a>
+                        </div>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#" class="nav-link">Команда <span class="dropdown-arrow">▼</span></a>
+                        <div class="dropdown-menu">
+                            <a href="#">Керівництво</a>
+                            <a href="#">Члени партії</a>
+                            <a href="#">Регіональні осередки</a>
+                        </div>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#" class="nav-link">Програма <span class="dropdown-arrow">▼</span></a>
+                        <div class="dropdown-menu">
+                            <a href="#">Політична програма</a>
+                            <a href="#">Реформи</a>
+                            <a href="#">Ідеологія</a>
+                        </div>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#" class="nav-link">Новини</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#" class="nav-link">Контакти</a>
+                    </div>
                 </nav>
             </div>
         </div>
@@ -657,6 +752,18 @@
                         target.scrollIntoView({
                             behavior: 'smooth'
                         });
+                    }
+                });
+            });
+
+            // Закриття випадаючих меню при кліку поза ними
+            document.addEventListener('click', function(e) {
+                const dropdowns = document.querySelectorAll('.dropdown-menu');
+                dropdowns.forEach(dropdown => {
+                    if (!dropdown.parentElement.contains(e.target)) {
+                        dropdown.style.opacity = '0';
+                        dropdown.style.visibility = 'hidden';
+                        dropdown.style.transform = 'translateY(10px)';
                     }
                 });
             });
