--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                             <a href="#">Історія</a>
                             <a href="#">Структура</a>
                             <a href="#">Документи</a>
-                            <a href="#">Статут</a>
+                            <a href="https://docs.google.com/document/d/1Z_ZQX6RcUzW5KoTGOgIgWIPpgB_pOoigJr-PRd0FoS0/edit?tab=t.0">Статут</a>
                         </div>
                     </div>
                     <div class="nav-item">
