--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                     <div class="nav-item">
                         <a href="#" class="nav-link">Партія <span class="dropdown-arrow">▼</span></a>
                         <div class="dropdown-menu">
-                            <a href="#">Про партію</a>
+                            <a href="pronas.html">Про партію</a>
                             <a href="#">Історія</a>
                             <a href="#">Структура</a>
                             <a href="#">Документи</a>
