--- a/index.html
+++ b/index.html
@@ -611,28 +611,28 @@
                 <article class="news-card">
                     <img src="https://images.unsplash.com/photo-1529107386315-e1a2ed48a620?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Новина 1" class="news-image">
                     <div class="news-content">
-                        <div class="news-date">19 червня 2025</div>
+                        <div class="news-date">25 червня 2025</div>
                         <h3 class="news-title">Кирило Громов представив програму реформ</h3>
                         <p class="news-excerpt">Кандидат у Президенти України представив детальний план реформ для відновлення країни.</p>
-                        <a href="#" class="read-more">Читати далі</a>
+                        <a href="https://forum.ukraine-gta.com.ua/threads/%D0%9F%D0%B0%D1%80%D1%82%D1%96%D1%8F-%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D0%B3%D0%BE-%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D1%83-%D0%A5%D0%A0%D0%95%D0%91%D0%95%D0%A2-%D0%9D%D0%90%D0%A6%D0%86%D0%87-%D0%9A%D0%B0%D0%BD%D0%B4%D0%B8%D0%B4%D0%B0%D1%82-%D0%9A%D0%B8%D1%80%D0%B8%D0%BB%D0%BE-%D0%93%D1%80%D0%BE%D0%BC%D0%BE%D0%B2.301101/" class="read-more">Читати далі</a>
                     </div>
                 </article>
                 <article class="news-card">
                     <img src="https://images.unsplash.com/photo-1521791055366-0d553872125f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Новина 2" class="news-image">
                     <div class="news-content">
-                        <div class="news-date">15 червня 2025</div>
-                        <h3 class="news-title">Зустріч з представниками ЄС</h3>
-                        <p class="news-excerpt">Представники партії обговорили питання подальшої підтримки України.</p>
-                        <a href="#" class="read-more">Читати далі</a>
+                        <div class="news-date">24 червня 2025</div>
+                        <h3 class="news-title">Зустріч з Генералом СБУ</h3>
+                        <p class="news-excerpt">Канидадт у Президенти Кирило Громов вислухав проблеми і провозиції щодо законодавчої бази.</p>
+                        <a href="https://forum.ukraine-gta.com.ua/threads/%D0%9F%D0%B0%D1%80%D1%82%D1%96%D1%8F-%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D0%B3%D0%BE-%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D1%83-%D0%A5%D0%A0%D0%95%D0%91%D0%95%D0%A2-%D0%9D%D0%90%D0%A6%D0%86%D0%87-%D0%9A%D0%B0%D0%BD%D0%B4%D0%B8%D0%B4%D0%B0%D1%82-%D0%9A%D0%B8%D1%80%D0%B8%D0%BB%D0%BE-%D0%93%D1%80%D0%BE%D0%BC%D0%BE%D0%B2.301101/" class="read-more">Читати далі</a>
                     </div>
                 </article>
                 <article class="news-card">
                     <img src="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Новина 3" class="news-image">
                     <div class="news-content">
-                        <div class="news-date">10 червня 2025</div>
-                        <h3 class="news-title">Нові члени партії</h3>
-                        <p class="news-excerpt">До лав партії приєдналися нові активні громадяни з різних регіонів України.</p>
-                        <a href="#" class="read-more">Читати далі</a>
+                        <div class="news-date">23 червня 2025</div>
+                        <h3 class="news-title">Створення партії</h3>
+                        <p class="news-excerpt">23 червня була створена партія "Хребет нації".</p>
+                        <a href="https://forum.ukraine-gta.com.ua/threads/%D0%9F%D0%B0%D1%80%D1%82%D1%96%D1%8F-%D0%9D%D0%B0%D1%86%D1%96%D0%BE%D0%BD%D0%B0%D0%BB%D1%8C%D0%BD%D0%BE%D0%B3%D0%BE-%D0%A6%D0%B5%D0%BD%D1%82%D1%80%D1%83-%D0%A5%D0%A0%D0%95%D0%91%D0%95%D0%A2-%D0%9D%D0%90%D0%A6%D0%86%D0%87-%D0%9A%D0%B0%D0%BD%D0%B4%D0%B8%D0%B4%D0%B0%D1%82-%D0%9A%D0%B8%D1%80%D0%B8%D0%BB%D0%BE-%D0%93%D1%80%D0%BE%D0%BC%D0%BE%D0%B2.301101/" class="read-more">Читати далі</a>
                     </div>
                 </article>
             </div>
