--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                         <a href="#" class="nav-link">Партія <span class="dropdown-arrow">▼</span></a>
                         <div class="dropdown-menu">
                             <a href="pronas.html">Про партію</a>
-                            <a href="#">Історія</a>
+                            <a href="history.html">Історія</a>
                             <a href="#">Структура</a>
                             <a href="#">Документи</a>
                             <a href="https://docs.google.com/document/d/1Z_ZQX6RcUzW5KoTGOgIgWIPpgB_pOoigJr-PRd0FoS0/edit?tab=t.0">Статут</a>
