--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                         <div class="dropdown-menu">
                             <a href="pronas.html">Про партію</a>
                             <a href="history.html">Історія</a>
-                            <a href="#">Структура</a>
+                            <a href="struktura.html">Структура</a>
                             <a href="#">Документи</a>
                             <a href="https://docs.google.com/document/d/1Z_ZQX6RcUzW5KoTGOgIgWIPpgB_pOoigJr-PRd0FoS0/edit?tab=t.0">Статут</a>
                         </div>
