--- a/index.html
+++ b/index.html
@@ -568,8 +568,7 @@
                     <div class="nav-item">
                         <a href="#" class="nav-link">Команда <span class="dropdown-arrow">▼</span></a>
                         <div class="dropdown-menu">
-                            <a href="#">Керівництво</a>
-                            <a href="#">Члени партії</a>
+                            <a href="team.html">Керівництво</a>
                         </div>
                     </div>
                     <div class="nav-item">
@@ -596,8 +595,8 @@
             <h1 class="hero-title">Хребет Нації</h1>
             <p class="hero-subtitle">Розбудова сильної, незалежної України. Нульова толерантність до корупції.</p>
             <div>
-                <a href="#" class="btn btn-primary">Приєднатися</a>
-                <a href="#" class="btn btn-outline">Дізнатися більше</a>
+                <a href="https://docs.google.com/forms/d/1CFsj-jbgxLVhoOQo_Ba206hGsISZh2GzHQlNeWV3_9g/edit" class="btn btn-primary">Приєднатися</a>
+                <a href="https://docs.google.com/spreadsheets/d/1eM0yq5eT1D2dLPIfOU4ATdqpSFPpJLLJm_lRXaJttX8/edit?resourcekey=&gid=429667169#gid=429667169" class="btn btn-outline">Дізнатися відповідь</a>
             </div>
         </div>
     </section>
@@ -642,26 +641,22 @@
             <h2 class="section-title">Керівництво партії</h2>
             <div class="team-grid">
                 <div class="team-card">
-                    <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Кирило Громов" class="team-image">
                     <h3 class="team-name">Кирило Громов</h3>
                     <p class="team-position">Кандидат у Президенти України</p>
                     <p class="team-contact">Telegram: @brobrixq</p>
                     <p class="team-contact">Discord: brobrixq</p>
                 </div>
                 <div class="team-card">
-                    <img src="https://randomuser.me/api/portraits/men/44.jpg" alt="Бодя Громов" class="team-image">
                     <h3 class="team-name">Бодя Громов</h3>
                     <p class="team-position">Кандидат у Прем'єр-Міністри</p>
                     <p class="team-contact">Telegram: @fauniy_hlop</p>
                 </div>
                 <div class="team-card">
-                    <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="Саня Житомирський" class="team-image">
                     <h3 class="team-name">Саня Житомирський</h3>
                     <p class="team-position">Куратор партії</p>
                     <p class="team-contact">Telegram: @Sanchas9</p>
                 </div>
                 <div class="team-card">
-                    <img src="https://randomuser.me/api/portraits/men/11.jpg" alt="Сергій Житомирський" class="team-image">
                     <h3 class="team-name">Сергій Житомирський</h3>
                     <p class="team-position">Член партії</p>
                 </div>
