--- a/index.html
+++ b/index.html
@@ -574,13 +574,11 @@
                     <div class="nav-item">
                         <a href="#" class="nav-link">Програма <span class="dropdown-arrow">▼</span></a>
                         <div class="dropdown-menu">
-                            <a href="#">Політична програма</a>
-                            <a href="#">Реформи</a>
-                            <a href="#">Ідеологія</a>
+                            <a href="polit.html">Політична програма</a>
                         </div>
                     </div>
                     <div class="nav-item">
-                        <a href="#" class="nav-link">Новини</a>
+                        <a href="#" class="nav-link">Для ЗМІ</a>
                     </div>
                     <div class="nav-item">
                         <a href="#" class="nav-link">Контакти</a>
