--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                         </div>
                     </div>
                     <div class="nav-item">
-                        <a href="#" class="nav-link">Для ЗМІ</a>
+                        <a href="news.html" class="nav-link">Для ЗМІ</a>
                     </div>
                     <div class="nav-item">
                         <a href="#" class="nav-link">Контакти</a>
