--- a/polit.html
+++ b/polit.html
@@ -259,8 +259,8 @@
                     <h3 class="program-block-title">Інші ініціативи</h3>
                     
                     <div class="program-item">
-                        <h4 class="program-item-title">Редакція Законодавства</h4>
-                        <p class="program-item-desc">Створення сучасної законодавчої бази та актуалізація застарілих нормативно-правових актів.</p>
+                        <h4 class="program-item-title">Доповнення Законодавства</h4>
+                        <p class="program-item-desc">Написання нових законів, що відповідають сучасним викликам.</p>
                     </div>
                     
                     <div class="program-item">
