--- a/pronas.html
+++ b/pronas.html
@@ -405,39 +405,34 @@
                 </a>
                 <nav>
                     <div class="nav-item">
-                        <a href="index.html" class="nav-link">Головна</a>
+                        <a href="#" class="nav-link">Головна</a>
                     </div>
                     <div class="nav-item">
-                        <a href="about.html" class="nav-link active">Партія <span class="dropdown-arrow">▼</span></a>
+                        <a href="#" class="nav-link">Партія <span class="dropdown-arrow">▼</span></a>
                         <div class="dropdown-menu">
-                            <a href="about.html" class="active">Про партію</a>
+                            <a href="pronas.html">Про партію</a>
                             <a href="history.html">Історія</a>
-                            <a href="structure.html">Структура</a>
-                            <a href="documents.html">Документи</a>
-                            <a href="statute.html">Статут</a>
+                            <a href="struktura.html">Структура</a>
+                            <a href="https://docs.google.com/document/d/1Z_ZQX6RcUzW5KoTGOgIgWIPpgB_pOoigJr-PRd0FoS0/edit?tab=t.0">Статут</a>
                         </div>
                     </div>
                     <div class="nav-item">
-                        <a href="team.html" class="nav-link">Команда <span class="dropdown-arrow">▼</span></a>
+                        <a href="#" class="nav-link">Команда <span class="dropdown-arrow">▼</span></a>
                         <div class="dropdown-menu">
                             <a href="team.html">Керівництво</a>
-                            <a href="members.html">Члени партії</a>
-                            <a href="branches.html">Регіональні осередки</a>
                         </div>
                     </div>
                     <div class="nav-item">
-                        <a href="program.html" class="nav-link">Програма <span class="dropdown-arrow">▼</span></a>
+                        <a href="#" class="nav-link">Програма <span class="dropdown-arrow">▼</span></a>
                         <div class="dropdown-menu">
-                            <a href="program.html">Політична програма</a>
-                            <a href="reforms.html">Реформи</a>
-                            <a href="ideology.html">Ідеологія</a>
+                            <a href="polit.html">Політична програма</a>
                         </div>
                     </div>
                     <div class="nav-item">
-                        <a href="news.html" class="nav-link">Новини</a>
+                        <a href="news.html" class="nav-link">Для ЗМІ</a>
                     </div>
                     <div class="nav-item">
-                        <a href="contacts.html" class="nav-link">Контакти</a>
+                        <a href="#" class="nav-link">Контакти</a>
                     </div>
                 </nav>
             </div>
