--- a/news.html
+++ b/news.html
@@ -90,7 +90,7 @@
             margin-top: 0.3rem;
         }
 
-        /* Навігація */
+        /* Оновлена навігація */
         nav {
             display: flex;
             gap: 0.5rem;
@@ -422,10 +422,10 @@
                     <div class="nav-item">
                         <a href="#" class="nav-link">Партія <span class="dropdown-arrow">▼</span></a>
                         <div class="dropdown-menu">
-                            <a href="about.html">Про партію</a>
+                            <a href="pronas.html">Про партію</a>
                             <a href="history.html">Історія</a>
-                            <a href="structure.html">Структура</a>
-                            <a href="statute.html">Статут</a>
+                            <a href="struktura.html">Структура</a>
+                            <a href="https://docs.google.com/document/d/1Z_ZQX6RcUzW5KoTGOgIgWIPpgB_pOoigJr-PRd0FoS0/edit?tab=t.0">Статут</a>
                         </div>
                     </div>
                     <div class="nav-item">
@@ -437,7 +437,7 @@
                     <div class="nav-item">
                         <a href="#" class="nav-link">Програма <span class="dropdown-arrow">▼</span></a>
                         <div class="dropdown-menu">
-                            <a href="program.html">Політична програма</a>
+                            <a href="polit.html">Політична програма</a>
                         </div>
                     </div>
                     <div class="nav-item">
@@ -544,10 +544,10 @@
                 <div class="footer-column">
                     <h3>Партія</h3>
                     <ul class="footer-links">
-                        <li class="footer-link"><a href="about.html">Про нас</a></li>
-                        <li class="footer-link"><a href="program.html">Програма</a></li>
-                        <li class="footer-link"><a href="structure.html">Структура</a></li>
-                        <li class="footer-link"><a href="statute.html">Документи</a></li>
+                        <li class="footer-link"><a href="pronas.html">Про нас</a></li>
+                        <li class="footer-link"><a href="polit.html">Програма</a></li>
+                        <li class="footer-link"><a href="struktura.html">Структура</a></li>
+                        <li class="footer-link"><a href="https://docs.google.com/document/d/1Z_ZQX6RcUzW5KoTGOgIgWIPpgB_pOoigJr-PRd0FoS0/edit?tab=t.0">Документи</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
