--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                         <a href="news.html" class="nav-link">Для ЗМІ</a>
                     </div>
                     <div class="nav-item">
-                        <a href="#" class="nav-link">Контакти</a>
+                        <a href="kontakty.html" class="nav-link">Контакти</a>
                     </div>
                 </nav>
             </div>
