--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
         <div class="container">
             <h2 class="join-title">Приєднуйся до нас!</h2>
             <p class="join-text">Стань частиною змін у нашій країні. Заповни заявку та пройди співбесіду, щоб стати членом партії "Хребет Нації".</p>
-            <a href="#" class="btn btn-primary">Подати заявку</a>
+            <a href="https://docs.google.com/forms/d/1CFsj-jbgxLVhoOQo_Ba206hGsISZh2GzHQlNeWV3_9g/edit" class="btn btn-primary">Подати заявку</a>
         </div>
     </section>
 
