--- a/kontakty.html
+++ b/kontakty.html
@@ -403,7 +403,8 @@
                 </a>
                 <nav>
                     <div class="nav-item">
-                        <a href="index.html" class="nav-link">Головна</a>
+                        <div class="nav-item">
+                        <a href="#" class="nav-link">Головна</a>
                     </div>
                     <div class="nav-item">
                         <a href="#" class="nav-link">Партія <span class="dropdown-arrow">▼</span></a>
@@ -430,7 +431,7 @@
                         <a href="news.html" class="nav-link">Для ЗМІ</a>
                     </div>
                     <div class="nav-item">
-                        <a href="contacts.html" class="nav-link active">Контакти</a>
+                        <a href="kontakty.html" class="nav-link">Контакти</a>
                     </div>
                 </nav>
             </div>
