--- a/news.html
+++ b/news.html
@@ -417,7 +417,8 @@
                 </a>
                 <nav>
                     <div class="nav-item">
-                        <a href="index.html" class="nav-link">Головна</a>
+                        <div class="nav-item">
+                        <a href="#" class="nav-link">Головна</a>
                     </div>
                     <div class="nav-item">
                         <a href="#" class="nav-link">Партія <span class="dropdown-arrow">▼</span></a>
@@ -441,10 +442,10 @@
                         </div>
                     </div>
                     <div class="nav-item">
-                        <a href="news.html" class="nav-link active">Для ЗМІ</a>
+                        <a href="news.html" class="nav-link">Для ЗМІ</a>
                     </div>
                     <div class="nav-item">
-                        <a href="contacts.html" class="nav-link">Контакти</a>
+                        <a href="kontakty.html" class="nav-link">Контакти</a>
                     </div>
                 </nav>
             </div>
