--- a/polit.html
+++ b/polit.html
@@ -380,6 +380,7 @@
             <div class="header-content">
                 <a href="index.html" class="logo">
                     <div class="nav-item">
+                        <div class="nav-item">
                         <a href="#" class="nav-link">Головна</a>
                     </div>
                     <div class="nav-item">
@@ -407,7 +408,7 @@
                         <a href="news.html" class="nav-link">Для ЗМІ</a>
                     </div>
                     <div class="nav-item">
-                        <a href="#" class="nav-link">Контакти</a>
+                        <a href="kontakty.html" class="nav-link">Контакти</a>
                     </div>
                 </nav>
             </div>
