--- a/pronas.html
+++ b/pronas.html
@@ -405,6 +405,7 @@
                 </a>
                 <nav>
                     <div class="nav-item">
+                        <div class="nav-item">
                         <a href="#" class="nav-link">Головна</a>
                     </div>
                     <div class="nav-item">
@@ -432,7 +433,7 @@
                         <a href="news.html" class="nav-link">Для ЗМІ</a>
                     </div>
                     <div class="nav-item">
-                        <a href="#" class="nav-link">Контакти</a>
+                        <a href="kontakty.html" class="nav-link">Контакти</a>
                     </div>
                 </nav>
             </div>
