--- a/team.html
+++ b/team.html
@@ -379,9 +379,7 @@
                 </a>
                 <nav>
                     <div class="nav-item">
-                        <a href="index.html" class="nav-link">Головна</a>
-                    </div>
-                    <div class="nav-item">
+                        <div class="nav-item">
                         <a href="#" class="nav-link">Головна</a>
                     </div>
                     <div class="nav-item">
@@ -409,7 +407,7 @@
                         <a href="news.html" class="nav-link">Для ЗМІ</a>
                     </div>
                     <div class="nav-item">
-                        <a href="#" class="nav-link">Контакти</a>
+                        <a href="kontakty.html" class="nav-link">Контакти</a>
                     </div>
                 </nav>
             </div>
