--- a/polit.html
+++ b/polit.html
@@ -90,7 +90,7 @@
             margin-top: 0.3rem;
         }
 
-        /* Навігація */
+        /* Оновлена навігація */
         nav {
             display: flex;
             gap: 0.5rem;
@@ -379,9 +379,14 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
+                    <div class="logo-text">
+                        <div class="logo-title">ХРЕБЕТ НАЦІЇ</div>
+                        <div class="logo-subtitle">Політична партія</div>
+                    </div>
+                </a>
+                <nav>
                     <div class="nav-item">
-                        <div class="nav-item">
-                        <a href="#" class="nav-link">Головна</a>
+                        <a href="index.html" class="nav-link">Головна</a>
                     </div>
                     <div class="nav-item">
                         <a href="#" class="nav-link">Партія <span class="dropdown-arrow">▼</span></a>
@@ -399,7 +404,7 @@
                         </div>
                     </div>
                     <div class="nav-item">
-                        <a href="#" class="nav-link">Програма <span class="dropdown-arrow">▼</span></a>
+                        <a href="#" class="nav-link active">Програма <span class="dropdown-arrow">▼</span></a>
                         <div class="dropdown-menu">
                             <a href="polit.html">Політична програма</a>
                         </div>
@@ -536,10 +541,10 @@
                 <div class="footer-column">
                     <h3>Партія</h3>
                     <ul class="footer-links">
-                        <li class="footer-link"><a href="about.html">Про нас</a></li>
-                        <li class="footer-link"><a href="program.html">Програма</a></li>
-                        <li class="footer-link"><a href="structure.html">Структура</a></li>
-                        <li class="footer-link"><a href="statute.html">Документи</a></li>
+                        <li class="footer-link"><a href="pronas.html">Про нас</a></li>
+                        <li class="footer-link"><a href="polit.html">Програма</a></li>
+                        <li class="footer-link"><a href="struktura.html">Структура</a></li>
+                        <li class="footer-link"><a href="https://docs.google.com/document/d/1Z_ZQX6RcUzW5KoTGOgIgWIPpgB_pOoigJr-PRd0FoS0/edit?tab=t.0">Документи</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -562,8 +567,8 @@
                     <h3>Контакти</h3>
                     <ul class="footer-links">
                         <li class="footer-link"><a href="https://t.me/party_backbone_of_the_nation">Telegram</a></li>
-                        <li class="footer-link"><a href="contacts.html">Email</a></li>
-                        <li class="footer-link"><a href="contacts.html">Офіс партії</a></li>
+                        <li class="footer-link"><a href="kontakty.html">Email</a></li>
+                        <li class="footer-link"><a href="kontakty.html">Офіс партії</a></li>
                     </ul>
                 </div>
             </div>
