--- a/news.html
+++ b/news.html
@@ -418,36 +418,47 @@
                 <nav>
                     <div class="nav-item">
                         <div class="nav-item">
-                        <a href="#" class="nav-link">Головна</a>
+                        <header>
+    <div class="container">
+        <div class="header-content">
+            <a href="index.html" class="logo">
+                <div class="logo-text">
+                    <div class="logo-title">ХРЕБЕТ НАЦІЇ</div>
+                    <div class="logo-subtitle">Політична партія</div>
+                </div>
+            </a>
+            <nav>
+                <div class="nav-item">
+                    <a href="index.html" class="nav-link">Головна</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="nav-link">Партія <span class="dropdown-arrow">▼</span></a>
+                    <div class="dropdown-menu">
+                        <a href="pronas.html">Про партію</a>
+                        <a href="history.html">Історія</a>
+                        <a href="struktura.html">Структура</a>
+                        <a href="https://docs.google.com/document/d/1Z_ZQX6RcUzW5KoTGOgIgWIPpgB_pOoigJr-PRd0FoS0/edit?tab=t.0">Статут</a>
                     </div>
-                    <div class="nav-item">
-                        <a href="#" class="nav-link">Партія <span class="dropdown-arrow">▼</span></a>
-                        <div class="dropdown-menu">
-                            <a href="pronas.html">Про партію</a>
-                            <a href="history.html">Історія</a>
-                            <a href="struktura.html">Структура</a>
-                            <a href="https://docs.google.com/document/d/1Z_ZQX6RcUzW5KoTGOgIgWIPpgB_pOoigJr-PRd0FoS0/edit?tab=t.0">Статут</a>
-                        </div>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="nav-link">Команда <span class="dropdown-arrow">▼</span></a>
+                    <div class="dropdown-menu">
+                        <a href="team.html">Керівництво</a>
                     </div>
-                    <div class="nav-item">
-                        <a href="#" class="nav-link">Команда <span class="dropdown-arrow">▼</span></a>
-                        <div class="dropdown-menu">
-                            <a href="team.html">Керівництво</a>
-                        </div>
+                </div>
+                <div class="nav-item">
+                    <a href="#" class="nav-link">Програма <span class="dropdown-arrow">▼</span></a>
+                    <div class="dropdown-menu">
+                        <a href="polit.html">Політична програма</a>
                     </div>
-                    <div class="nav-item">
-                        <a href="#" class="nav-link">Програма <span class="dropdown-arrow">▼</span></a>
-                        <div class="dropdown-menu">
-                            <a href="polit.html">Політична програма</a>
-                        </div>
-                    </div>
-                    <div class="nav-item">
-                        <a href="news.html" class="nav-link">Для ЗМІ</a>
-                    </div>
-                    <div class="nav-item">
-                        <a href="kontakty.html" class="nav-link">Контакти</a>
-                    </div>
-                </nav>
+                </div>
+                <div class="nav-item">
+                    <a href="news.html" class="nav-link">Для ЗМІ</a>
+                </div>
+                <div class="nav-item">
+                    <a href="kontakty.html" class="nav-link">Контакти</a>
+                </div>
+            </nav>
             </div>
         </div>
     </header>
